force-app/main/default/objects/User/fields/GoogleAccessToken__c.field-meta.xml
<CustomField>
    <fullName>GoogleAccessToken__c</fullName>
    <label>GoogleAccessToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>