force-app/main/default/objects/User/fields/GoogleAuthCode__c.field-meta.xml
<CustomField>
    <fullName>GoogleAuthCode__c</fullName>
    <label>GoogleAuthCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>