force-app/main/default/objects/User/fields/GoogleRefreshToken__c.field-meta.xml
<CustomField>
    <fullName>GoogleRefreshToken__c</fullName>
    <label>GoogleRefreshToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>