force-app/main/default/objects/User/fields/GoogleTokenDate__c.field-meta.xml
<CustomField>
    <fullName>GoogleTokenDate__c</fullName>
    <label>GoogleTokenDate</label>
    <type>DateTime</type>
</CustomField>