force-app/main/default/objects/User/fields/GoogleTokenExpiresIn__c.field-meta.xml
<CustomField>
    <fullName>GoogleTokenExpiresIn__c</fullName>
    <label>GoogleTokenExpiresIn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>