force-app/main/default/objects/User/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <label>ImageUrl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>