force-app/main/default/objects/User/fields/Link_to_User__c.field-meta.xml
<CustomField>
    <fullName>Link_to_User__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;?noredirect=1&quot;,  FirstName &amp; &quot; &quot; &amp; LastName, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to User</label>
    <type>Text</type>
</CustomField>