force-app/main/default/objects/User/fields/LinkedInToken__c.field-meta.xml
<CustomField>
    <fullName>LinkedInToken__c</fullName>
    <label>LinkedIn Token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>