force-app/main/default/objects/User/fields/LinkedInTokenExpireDate__c.field-meta.xml
<CustomField>
    <fullName>LinkedInTokenExpireDate__c</fullName>
    <label>LinkedIn Token Expire Date</label>
    <type>DateTime</type>
</CustomField>