force-app/main/default/objects/User/fields/ZOHO_ID__c.field-meta.xml
<CustomField>
    <fullName>ZOHO_ID__c</fullName>
    <externalId>true</externalId>
    <label>ZOHO ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>