force-app/main/default/objects/User/fields/ZOHOExternalId__c.field-meta.xml
<CustomField>
    <fullName>ZOHOExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ZOHO External Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>